arc-script/arc-script-core/tests/insta/snapshots/mlir@fib.arc.snap
---
source: arc-script-core/tests/insta/mod.rs
expression: s
input_file: arc-script-core/tests/insta/snapshot-tests/fib.arc
---
error: Double use of value
  ┌─ /home/klas/Workspace/arc/arc-script/arc-script-core/tests/insta/snapshot-tests/fib.arc:4:8
  │
4 │     if n > 2 {
  │        ^
5 │         fib(n - 1) + fib(n - 2)
  │             ^

error: Double use of value
  ┌─ /home/klas/Workspace/arc/arc-script/arc-script-core/tests/insta/snapshot-tests/fib.arc:4:8
  │
4 │     if n > 2 {
  │        ^
5 │         fib(n - 1) + fib(n - 2)
  │                          ^

error: Double use of value
  ┌─ /home/klas/Workspace/arc/arc-script/arc-script-core/tests/insta/snapshot-tests/fib.arc:5:13
  │
5 │         fib(n - 1) + fib(n - 2)
  │             ^            ^


